force-app/main/default/objects/Customer_Survey__c/fields/Staff_Courteous_and_Helpful_Score__c.field-meta.xml
<CustomField>
    <fullName>Staff_Courteous_and_Helpful_Score__c</fullName>
    <formula>If( Staff_Courteous_and_Helpful__c =5, &quot;Strongly Agree&quot;,
If( Staff_Courteous_and_Helpful__c =4, &quot;Agree&quot;,
If( Staff_Courteous_and_Helpful__c =3, &quot;Neutral&quot;,
If( Staff_Courteous_and_Helpful__c =2, &quot;Disagree&quot;,
If( Staff_Courteous_and_Helpful__c =1, &quot;Strongly Disagree&quot;,&quot;&quot;)))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Staff Courteous and Helpful Score</label>
    <type>Text</type>
</CustomField>