force-app/main/default/objects/Customer_Survey__c/fields/Suggestions__c.field-meta.xml
<CustomField>
    <fullName>Suggestions__c</fullName>
    <description>Survey Question 13. Do you have any suggestions for improving our services?</description>
    <inlineHelpText>Do you have any suggestions for improving our services?</inlineHelpText>
    <label>Suggestions</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>