force-app/main/default/objects/Customer_Survey__c/fields/Summary_of_Discussion_with_Client__c.field-meta.xml
<CustomField>
    <fullName>Summary_of_Discussion_with_Client__c</fullName>
    <label>Summary of Discussion with Client</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>