force-app/main/default/objects/Customer_Survey__c/fields/Super_Ops__c.field-meta.xml
<CustomField>
    <fullName>Super_Ops__c</fullName>
    <description>Changed from Opportunity: Super_Ops to Project_Manager_New_Full_Name__c</description>
    <formula>ATI_Job__r.Project_Manager_Full_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Super_Ops</label>
    <type>Text</type>
</CustomField>