force-app/main/default/objects/Customer_Survey__c/fields/Superintendent__c.field-meta.xml
<CustomField>
    <fullName>Superintendent__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Superintendent</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys2</relationshipName>
    <type>Lookup</type>
</CustomField>