force-app/main/default/objects/Customer_Survey__c/fields/Survey_completed_by_appropriate_person__c.field-meta.xml
<CustomField>
    <fullName>Survey_completed_by_appropriate_person__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check this box if the person who completed the customer survey was the appropriate person to be answering the survey questions. For example, they would be an appropriate person if they were the on-site contact at the job site.</inlineHelpText>
    <label>Survey completed by appropriate person?</label>
    <type>Checkbox</type>
</CustomField>