force-app/main/default/objects/Customer_Survey__c/fields/Survey_Created_Count__c.field-meta.xml
<CustomField>
    <fullName>Survey_Created_Count__c</fullName>
    <formula>if( CreatedDate  &lt;&gt; null,0,1)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Survey Created Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>