force-app/main/default/objects/Customer_Survey__c/fields/Survey_Recipient__c.field-meta.xml
<CustomField>
    <fullName>Survey_Recipient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Additional recipients that need to be emailed the survey responses via the &apos;New Survey Notification&apos; workflow—This field is populated via code.</description>
    <label>Survey Recipient</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Surveys5</relationshipName>
    <type>Lookup</type>
</CustomField>