force-app/main/default/objects/Customer_Survey__c/fields/Team_Appearance__c.field-meta.xml
<CustomField>
    <fullName>Team_Appearance__c</fullName>
    <description>Survey Question 3. Team Appearance - Each member of the ATI team was groomed and dressed appropriately at all times.</description>
    <label>Team Appearance</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>