force-app/main/default/objects/Customer_Survey__c/fields/Test_Update__c.field-meta.xml
<CustomField>
    <fullName>Test_Update__c</fullName>
    <label>Test Update</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>