force-app/main/default/objects/Customer_Survey__c/validationRules/Require_desc_of_disciplinary_action.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_desc_of_disciplinary_action</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Disciplinary_action_needed__c = TRUE, ISBLANK( Disciplinary_action_description__c ) )</errorConditionFormula>
    <errorDisplayField>Disciplinary_action_description__c</errorDisplayField>
    <errorMessage>You must enter a description for any needed disciplinary action.</errorMessage>
</ValidationRule>