force-app/main/default/objects/Customer_Survey__c/validationRules/Require_plan_for_reoccurring_problem.validationRule-meta.xml
<ValidationRule>
    <fullName>Require_plan_for_reoccurring_problem</fullName>
    <active>true</active>
    <errorConditionFormula>AND( Reoccurring_concern_for_this_ATI_person__c  = TRUE, ISBLANK( Plan_of_action_for_reoccurring_concern__c ) )</errorConditionFormula>
    <errorDisplayField>Plan_of_action_for_reoccurring_concern__c</errorDisplayField>
    <errorMessage>You must enter a plan of action for any reoccurring concerns.</errorMessage>
</ValidationRule>