force-app/main/default/objects/Customer_Survey__c/listViews/All_Surveys.listView-meta.xml
<ListView>
    <fullName>All_Surveys</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Overall_Score_10pt_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Surveys</label>
</ListView>