force-app/main/default/objects/Customer_Survey__c/listViews/Consultant_Surveys.listView-meta.xml
<ListView>
    <fullName>Consultant_Surveys</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>Job_Name__c</columns>
    <columns>Division__c</columns>
    <columns>Office__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Project_Manager_new__c</columns>
    <columns>Overall_Score_10pt_Percent__c</columns>
    <columns>Overall_Consultant_Score__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_YEAR</value>
    </filters>
    <filters>
        <field>Division__c</field>
        <operation>equals</operation>
        <value>Consulting</value>
    </filters>
    <label>Consultant Surveys</label>
</ListView>