force-app/main/default/objects/Customer_Survey__c/listViews/Surveys_this_Month.listView-meta.xml
<ListView>
    <fullName>Surveys_this_Month</fullName>
    <columns>NAME</columns>
    <columns>ATI_Job__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>Office__c</columns>
    <columns>NPS__c</columns>
    <columns>Overall_Score_10pt_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>THIS_MONTH</value>
    </filters>
    <label>Surveys this Month</label>
</ListView>