force-app/main/default/objects/Customer_Survey__c/listViews/Surveys_yesterday.listView-meta.xml
<ListView>
    <fullName>Surveys_yesterday</fullName>
    <columns>NAME</columns>
    <columns>Opportunity__c</columns>
    <columns>Project_Site_Contact__c</columns>
    <columns>Office__c</columns>
    <columns>Project_Manager__c</columns>
    <columns>Operations_Manager__c</columns>
    <columns>Superintendent__c</columns>
    <columns>Overall_Score_10pt_Percent__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>LAST_UPDATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>YESTERDAY</value>
    </filters>
    <label>Surveys sent yesterday</label>
</ListView>