force-app/main/default/objects/Customer_Survey__c/listViews/USAA_Surveys.listView-meta.xml
<ListView>
    <fullName>USAA_Surveys</fullName>
    <columns>CREATED_DATE</columns>
    <columns>Opportunity__c</columns>
    <columns>Job_Name__c</columns>
    <columns>Account_Name__c</columns>
    <columns>Office__c</columns>
    <columns>Overall_Score_10pt_Percent__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Account_Name__c</field>
        <operation>contains</operation>
        <value>USAA</value>
    </filters>
    <filters>
        <field>Office__c</field>
        <operation>equals</operation>
        <value>San Diego</value>
    </filters>
    <label>USAA Surveys</label>
</ListView>